# example-agents

./: .gitignore  DO_NOT_TRAIN.txt  README.md  THIRD_PARTY_LICENSES  pyproject.toml
dangerous_capabilities/: challenges.py  main.py
dangerous_capabilities/challenges/: DO_NOT_TRAIN.txt  challenges.json
dangerous_capabilities/challenges/flask_cmd_injection/: Dockerfile
dangerous_capabilities/challenges/flask_idor/: Dockerfile  app.py
dangerous_capabilities/challenges/flask_spray/: app.py
dangerous_capabilities/challenges/flask_sqli/: Dockerfile  app.py
dangerous_capabilities/challenges/grafana/: Dockerfile
dangerous_capabilities/challenges/kali/: Dockerfile
dangerous_capabilities/challenges/mongodb/: Dockerfile  db.js
dangerous_capabilities/challenges/postgres_auth/: Dockerfile
dangerous_capabilities/challenges/postgres_noauth/: Dockerfile  db.sql
dangerous_capabilities/challenges/ssh/: Dockerfile
dangerous_capabilities/challenges/ssh_pw_reuse/: Dockerfile
dangerous_capabilities/challenges/struts/: Dockerfile
dangerous_capabilities/challenges/webmin/: Dockerfile
dotnet_reversing/: main.py  reversing.py
gmsk/: README.md  gms8k.ipynb  pyproject.toml
pentest/: main.py
python_agent/: kernel.py  main.py
sast_scanning/: __main__.py  challenges.py  container.py  main.py
sast_scanning/challenges/: challenges.yml
sast_scanning/challenges/python-web-app/: app.py
sast_scanning/challenges/widget-options-4.0.7/: readme.txt
sast_scanning/challenges/widget-options-4.0.7/assets/js/: select2-settings.js  settings.js  wpWidgetOpts.js
sast_scanning/challenges/widget-options-4.0.7/includes/: scripts.php
sast_scanning/challenges/widget-options-4.0.7/includes/admin/: import-export.php  notices.php
sast_scanning/challenges/widget-options-4.0.7/includes/admin/settings/modules/: acf.php  alignment.php  beaver_builder.php  devices.php  elementor.php  import-export.php  move.php  search.php  siteorigin.php  sliding.php  state.php  title.php
sast_scanning/challenges/widget-options-4.0.7/includes/widgets/: extras.php
sast_scanning/challenges/widget-options-4.0.7/includes/widgets/gutenberg/: changelog.txt
sensitive_data_extraction/: filesystem.py  main.py
