[project]
name = "gmsk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=3.5.0",
    "dreadnode>=1.0.0rc3",
    "peft>=0.15.2",
    "trl>=0.17.0",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "ruff>=0.11.5",
]
